# VisualAttention

./: .gitattributes  README.md
VA++/: .gitignore  CMakeLists.txt
VA++/sim/: CMakeLists.txt  NetConn.h  SpecialNet.h  WeightHdfData.h  conn.h  exe1.cpp  exe1.json  projections.h
VentralStream/: WorldToBrain.xml  experiment0.xml  external.xsl  grid.xml  luminances.json  model.xml  vs1.proj
analysis/: README.md  load_vs.m  vssetgrid.m  vssurf.m  vsview.m
connectionFuncs/: README.numba_cuda_versions.md  carry.ods  gabor.py  gabor_gpu.py  gabor_gpu_run.py  gabor_run.py  offset_retgauss.py  offset_retgauss_forpaper.py  offset_retgauss_gpu.py  offset_retgauss_gpu_forpaper.py  offset_retgauss_gpu_run.py  offset_retgauss_run.py  offsetdual_retgauss.py  offsetdual_retgauss_gpu.py  offsetdual_retgauss_gpu_run.py  performancefig.py  prefixscan_gpu.py  reduce_nonzero_gpu.py  retino_gauss.m  retino_gauss.py  scan2_recursive.py  scan2_recursive_min.py  scan_test.py  scan_test_recursive.py  scan_test_recursive_works_with_prints.py  testshift.py
datainput/: CMakeLists.txt  eyeframe.cpp  eyeframe.h  luminance.h  luminances_example.json  show_data.m  vsDataMaker.cpp  worldframe.cpp  worldframe.h  worldtest.cpp
datainput/brahms_namespace/: README.md
papers/academia_letter/: GPU.bib  gpu_for_connections.tex
